src/test/ui/derives/derives-span-Hash-enum.stderr
error[E0277]: the trait bound `Error: Hash` is not satisfied
  --> $DIR/derives-span-Hash-enum.rs:8:6
   |
LL |      Error
   |      ^^^^^ the trait `Hash` is not implemented for `Error`
   | 
  ::: $SRC_DIR/core/src/hash/mod.rs:LL:COL
   |
LL |     fn hash<H: Hasher>(&self, state: &mut H);
   |             - required by this bound in `std::hash::Hash::hash`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
